# github-vanity

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
github_vanity/: __init__.py  console.py  font.py  utils.py  write.py
